Fixed logo overflow issue

--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -50,6 +50,7 @@ header .logo {
 	position: absolute;
 	left: 20%;
 	top: 170px;
+	overflow: hidden;
 }
 
 header .logo h2 {
